# pallas-slenderpy

./: .gitignore  CONTRIBUTING.md  README.md  create_uvenv  create_virtualenv  pyproject.toml  requirements.txt  setup.py
.github  /workflows/: pytest.yml
.github/workflows/: pytest.yml
doc/: README.md  conf.py  contents.rst  getting-started.rst  index.rst  make.bat  modules.rst  slenderpy.rst  structvib.rst
examples/: cable_static.py  create_env
src/slenderpy/: _cable_utils.py  _progress_bar.py  beam.py  cable.py  cable_wakeosc.py  fatigue.py  fdm_utils.py  force.py  simtools.py  turbwind.py  wind.py
src/slenderpy/future/: __init__.py  _constant.py
src/slenderpy/future/cable/static/: blondel.py  catenary.py  frequency.py  nleq.py  parabolic.py
structvib/: _cable_utils.py  _progress_bar.py  beam.py  cable_wakeosc.py  fdm_utils.py  force.py  wind.py
test/: conftest.py  test_future-cable-static-catenary.py  test_future-cable-static-nleq.py  test_future-cable-static-parabolic.py
