[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "structvib"
version = "2023.1.0"
authors = [
  {name = "Eurobios", email = "ecieren@eurobios.com"},
]
description = "Structvib is a python package to simulate the vibrations of elongated structures like cables or beams."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pre-commit >= 2.9.0",
    "matplotlib >= 3.3.2",
    "numpy >= 1.19.0",
    "pandas >= 1.1.3",
    "scipy >= 1.5.2",
    "tqdm >= 4.58.0",
    "xarray >= 0.16.2"
]

[project.urls]
"Homepage" = "https://gitlab.eurobios.com/main/structvib"



